tests/errors/1_lexical_errors/invalid_double-7.java
class Main {
    static void run() {
        double x = .;
    }
}
